[package]
name = "security"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.43"
crossbeam-channel = "0.5.15"
eframe = "0.33.3"
env_logger = "0.11.8"
ffmpeg-next = { version = "8.0.0", features = ["rpi"] }
image = "0.25.9"
log = "0.4.29"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
serde_json = "1.0.149"
